--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,15 @@
 
   <!-- KUTEJS -->
   <script src="https://cdn.jsdelivr.net/npm/kute.js@2.1.2/dist/kute.min.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-209677629-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
+    gtag('config', 'UA-209677629-1');
+  </script>
   <title>LiorWebDev</title>
 </head>
 
