--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -50,7 +50,7 @@
       gtag("config", "UA-209677629-2");
     </script>
 
-    <title>LiorWebDev</title>
+    <title>Liorwebdev - Fullstack Web Developement</title>
   </head>
 
   <body>
