--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,18 @@
     rel="stylesheet" />
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-209677629-1"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-209677629-1"></script> -->
+
+
+
+  <script src="https://www.google.com/recaptcha/enterprise.js?render=6LdnT8McAAAAAIUg4rIJiXGrPizeWYhWCaA5pnaP"></script>
+  <!-- <script>
+    grecaptcha.enterprise.ready(function () {
+      grecaptcha.enterprise.execute('6LdnT8McAAAAAIUg4rIJiXGrPizeWYhWCaA5pnaP', { action: 'login' }).then(function (token) {
+         ...
+      });
+  });
+  </script> -->
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-209677629-2"></script>
